crates/no_expect_outside_tests/ui/fail_expect_with_cfg_attr.stderr
error: `.expect(..)` is not allowed outside tests or doctests
  --> $DIR/fail_expect_with_cfg_attr.rs:6:13
   |
LL |     let _ = value.expect("handler should not ignore errors");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Function `handler` is not annotated with a recognised test attribute.
   = note: Receiver type: `std::option::Option<i32>`.
   = help: Propagate the error or handle the `None`/`Err` case explicitly.
note: the lint level is defined here
  --> $DIR/fail_expect_with_cfg_attr.rs:1:9
   |
LL | #![deny(no_expect_outside_tests)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

